2009-07-29  Ariya Hidayat  <ariya.hidayat@nokia.com>

Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=27813

        [Qt] Support pixel tests in DumpRenderTree for the Qt port.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):
        (WebCore::DumpRenderTree::open):
        (WebCore::DumpRenderTree::setDumpPixels):
        (WebCore::DumpRenderTree::dump):
        * DumpRenderTree/qt/DumpRenderTree.h:
        * DumpRenderTree/qt/main.cpp:
        (main):

Canonical link: https://commits.webkit.org/38185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46579 268f45cc-cd09-0410-ab3c-d52691b4dbfc